force-app/main/default/objects/Vehicle__c/fields/Assistance_executive__c.field-meta.xml
<CustomField>
    <fullName>Assistance_executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistance executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>