force-app/main/default/objects/Vehicle__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>