force-app/main/default/objects/Vehicle__c/fields/Rent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_End_Date__c</fullName>
    <label>Rent End Date</label>
    <type>Date</type>
</CustomField>