force-app/main/default/objects/Vehicle__c/fields/Rent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Start_Date__c</fullName>
    <label>Rent Start Date</label>
    <type>Date</type>
</CustomField>