force-app/main/default/objects/Vehicle__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles2</relationshipName>
    <type>Lookup</type>
</CustomField>