force-app/main/default/objects/Vehicle__c/fields/Sales_Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_s_Email__c</fullName>
    <formula>Sales_Manager_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager’s Email</label>
    <type>Text</type>
</CustomField>