force-app/main/default/objects/Vehicle__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Vehicles (Executive)</relationshipLabel>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>