force-app/main/default/objects/Vehicle__c/fields/Send_Maintenance_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Maintenance_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Maintenance Notification</label>
    <type>Checkbox</type>
</CustomField>