force-app/main/default/objects/Vehicle__c/fields/Send_Rent_End_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Rent_End_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Rent End Notification</label>
    <type>Checkbox</type>
</CustomField>