force-app/main/default/objects/Vehicle__c/fields/Vehicle_maintenance_date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_maintenance_date__c</fullName>
    <label>Vehicle maintenance date</label>
    <type>Date</type>
</CustomField>