force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Number__c</columns>
    <columns>Branch__c</columns>
    <columns>CompanyId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>